Use autoconfigure machinery to provide round() function if missing.

This may be overkill, as I haven't spotted a current system without
a round() function, but the code as it stood was inconsistent
anyway. This finds a raison-d'etre for libdashermisc. While here
use libtool to build all libraries, not just some of them.

https://bugzilla.gnome.org/show_bug.cgi?id=508435