Src/Common/round.h
@@ -1,0 +1,3 @@
+extern "C" {
+double round(double);
+}
